# pygeotech

./: .gitignore  README.md  pyproject.toml
examples/: 01_darcy_seepage.py  02_richards_infiltration.py  03_contaminant_transport.py  04_heat_conduction.py  05_elastic_settlement.py  06_coupled_flow_transport.py  07_slope_stability_lem.py  08_critical_surface_search.py  09_stratigraphy_classification.py  10_stratigraphy_3d_model.py  11_basin_multiphysics.py  12_gmsh_complex_geometry.py  README.md
pygeotech/: __init__.py
pygeotech/boundaries/: __init__.py  base.py  internal.py  locators.py  time_varying.py
pygeotech/coupling/: __init__.py  base.py  iterative.py  monolithic.py  sequential.py
pygeotech/examples/: __init__.py
pygeotech/geometry/: __init__.py  csg.py  layers.py  mesh.py  primitives.py
pygeotech/materials/: __init__.py  base.py  constitutive.py  fields.py  library.py
pygeotech/physics/: __init__.py  base.py  darcy.py  heat.py  mechanics.py  richards.py  svat.py  transport.py
pygeotech/postprocess/: __init__.py  export.py  fields.py  integrals.py  probes.py
pygeotech/slope/: __init__.py  lem.py  profile.py  search.py  slices.py  srm.py  surfaces.py
pygeotech/solvers/: __init__.py  analytical.py  base.py  fenics_backend.py  (+2 more)
tests/: test_analytical_full.py  test_boundaries.py  test_coupling.py  test_coupling_full.py  test_geometry.py  test_heat_full.py  test_materials.py  test_mechanics_full.py  test_physics.py  test_postprocess.py  test_richards_full.py  test_slope.py  test_solvers.py  test_stratigraphy.py  test_time.py  test_transport_full.py
(+16 files in other folders)
