[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeotech"
version = "0.1.0"
description = "A modular Python package for modeling coupled processes in geotechnical engineering and geosciences."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "pygeotech contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
fipy = ["fipy>=3.4"]
fenics = ["fenics-dolfinx>=0.7"]
pinn = ["torch>=2.0"]
meshing = ["gmsh>=4.11", "meshio>=5.3"]
viz3d = ["pyvista>=0.40"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "pygeotech[fipy,pinn,meshing,viz3d,dev]",
]

[tool.setuptools.packages.find]
include = ["pygeotech*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
